force-app/main/default/objects/Employee_Engagement__c/Employee_Engagement__c.object-meta.xml
<CustomObject>
    <label>Employee Engagement</label>
    <nameField>
        <label>Employee Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>